# drift

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: example.yaml
docs/: covariance.md  models.md
drift/: __init__.py  analytic_marginalization.py  bias.py  config.py  cosmology.py  covariance.py  eft_bias.py  eft_config.py  eft_models.py  eft_terms.py  emulator.py  galaxy_emulator.py  galaxy_models.py  io.py  kernels.py  models.py  multipoles.py  one_loop.py  rsd.py  synthetic.py  taylor.py
scripts/: eft_prompt.txt  find_outlier_realizations_xiqg.py  inference_dsg.py  inference_hod.py  inference_joint.py  inference_pgg.py  marg_consistency_cosmo_results.npz  marg_consistency_results.npz  measure_dsg_multipoles.py  plot_bestfit_dsg.py  plot_bestfit_hod.py  plot_bestfit_pgg.py  plot_correlation_matrix_pgg.py  plot_correlation_matrix_pqg.py  plot_correlation_matrix_pqq.py  plot_correlation_matrix_xi_common.py  plot_correlation_matrix_xigg.py  plot_correlation_matrix_xiqg.py  plot_correlation_matrix_xiqq.py  plot_covariance_mocks.py  plot_dsg_correlation.py  plot_dsg_multipoles.py  plot_dsm_multipoles.py  plot_mock_realizations_xiqg.py  plot_model_comparison.py  plot_pgg_correlation.py  plot_pqq_correlation.py  plot_rsd_comparison.py  plot_triangle.py  plot_triangle_dsg.py  read_ds_data.ipynb  run_dsg_correlation.py  run_dsg_multipoles.py  run_dsm_multipoles.py  run_pgg_correlation.py  run_pqq_correlation.py  test_emulator_accuracy.py  test_marg_consistency.py  test_marg_consistency_cosmo.py
tests/: test_analytic_marg.py  test_cosmo_grid.py  test_kernels.py  (+32 more)
(+19 files in other folders)
